[project]
name = "rag-tp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.8",
    "ipykernel>=7.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.16",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
]
